force-app/main/default/objects/Question_Definition__c/Question_Definition__c.object-meta.xml
<CustomObject>
    <description>Custom object to record the question definitions for the Fraud, Error and Non-Compliance (FENC) assessment activities</description>
    <label>Question Definition</label>
    <nameField>
        <displayFormat>QED-{00000}</displayFormat>
        <label>Question Definition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>