force-app/main/default/objects/Question_Definition__c/fields/Picklist_Labels__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Labels__c</fullName>
    <description>Used to store question answer labels.</description>
    <inlineHelpText>Used to store question answer labels. Please ensure that you have the same number of picklist labels and picklist values.</inlineHelpText>
    <label>Picklist Labels</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>