force-app/main/default/objects/Question_Definition__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <description>Used to store question answer picklist values.</description>
    <inlineHelpText>Used to store question answer picklist values. Please ensure that you input the same amount of picklist labels and picklist values.</inlineHelpText>
    <label>Picklist Values</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>