force-app/main/default/objects/Question_Definition__c/fields/Question_Status__c.field-meta.xml
<CustomField>
    <fullName>Question_Status__c</fullName>
    <defaultValue>&apos;Active&apos;</defaultValue>
    <label>Question Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Historic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>