force-app/main/default/objects/Question_Definition__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <description>Text to use in Questionnaire</description>
    <label>Question Text</label>
    <type>TextArea</type>
</CustomField>