force-app/main/default/objects/Question_Definition__c/recordTypes/Warm_Homes.recordType-meta.xml
<RecordType>
    <fullName>Warm_Homes</fullName>
    <active>true</active>
    <label>Warm Homes</label>
</RecordType>